--- a/ui/src/app/reset/reset.component.html
+++ b/ui/src/app/reset/reset.component.html
@@ -1,1 +1,1 @@
-<a href="javascript:void(0)" (click)="resetHomebridgeState()" class="grey-text" [translate]="'reset.label_reset_homebridge'">reset homebridge</a>
+<a href="javascript:void(0)" (click)="resetHomebridgeState()" class="dropdown-item waves-effect waves-light" [translate]="'reset.label_reset_homebridge'">reset homebridge</a>
