--- a/ui/src/app/status/status.component.html
+++ b/ui/src/app/status/status.component.html
@@ -217,8 +217,8 @@
 <div class="row">
   <div class="col-md-12 text-center mb-3 grey-text">
     <small *ngIf="$auth.user.admin">
-      <app-reset></app-reset>
-      -
+      <!-- <app-reset></app-reset>
+      - -->
     </small>
     <small>
       <a class="grey-text" target="_blank" rel="noopener noreferrer" href="https://github.com/RienduPre/homebridge-config-ui-rdp">{{ $auth.env.packageName }} v{{ $auth.env.packageVersion }}</a>
