--- a/ui/src/app/reset/reset.modal.component.html
+++ b/ui/src/app/reset/reset.modal.component.html
@@ -11,8 +11,7 @@
     <ul>
       <li [translate]="'reset.message_reset_will_unpair_from_homekit'">A reset will unpair this Homebridge instance from your Apple HomeKit setup.</li>
       <li [translate]="'reset.message_need_to_remove_homebridge_accessory_from_home_app'">You will need to remove the existing Homebridge accessory from the Home app manually.</li>
-      <li [translate]="'reset.message_all_automations_will_be_reset'">All automations and will need to be reconfigured after a reset.</li>
-      <li [translate]="'reset.message_your_homebridge_username_will_be_changed'">Your Homebridge username and pin will be changed.</li>
+      <li [translate]="'reset.message_all_automations_will_be_reset'">All automations need to be reconfigured after a reset.</li>
       <li><strong [innerHTML]="'reset.message_accessory_config_will_not_be_changed' | translate">The rest of your config will not be changed. If Homebridge is not starting due to a bad config a reset will not fix it.</strong></li>
     </ul>
     <div class="text-center">
